static/src/app/styles/app.styl
@import 'nib'
@import '_colors.styl'

body
    font-face Helvetica, 'Helvetica Neue', sans-serif

.home-branding-wrapper
    margin-top 20px

.branding-huge
    font-size 100px
    font-weight 800
    letter-spacing -8px

.branding-small
    font-size 15px
    font-weight 800
    letter-spacing -1px

    a
        color black

.branding-medium
    font-size 36px
    font-weight 800
    letter-spacing -3px

    a
        color black

.branding-subtitle
    font-weight normal

.header
    margin-top 20px
    margin-bottom 20px

.header-user-menu-name-link
    margin-left 3px

.header-user-menu
    margin-top 35px

.header-menu-list
    margin-left 20px
    position relative
    top -4px

.header-menu-link
    color $grey3
    text-transform uppercase
    font-weight bold
    font-size 13px

    &:hover
        color black
        text-decoration none

    &.active
        color black

.home-123-bullets-wrapper
    margin-top 80px
    margin-bottom 20px

.home-social-auth-wrapper
    margin-bottom 50px

.home-123-bullet
    margin-bottom 40px

.big-number
    border 3px solid $grey2
    font-size 20px
    font-weight bold
    padding 8px 15px
    border-radius 30px
    margin-right 5px

.inline-block
    display inline-block

.margin-vertical-50
    margin-top 50px
    margin-bottom 50px

.margin-vertical-10
    margin-top 10px
    margin-bottom 10px

.text-help-small
    font-size 12px


.btn-social-auth
    width 125px
    border-radius 3px
    margin-bottom 4px

.btn-facebook
    background-color $facebook-blue
    color lighten($facebook-blue, 40)

    &:hover
        background-color darken($facebook-blue, 5)
        color lighten($facebook-blue, 50)


.btn-twitter
    background-color $twitter-blue
    color lighten($twitter-blue, 30)

    &:hover
        background-color darken($twitter-blue, 5)
        color lighten($twitter-blue, 40)


.btn-google
    background-color $google-red
    color lighten($google-red, 30)

    &:hover
        background-color darken($google-red, 5)
        color lighten($google-red, 40)


.btn-persona
    background-color $persona-orange
    color lighten($persona-orange, 30)

    &:hover
        background-color darken($persona-orange, 5)
        color lighten($persona-orange, 40)

.horizontal-line
    border-top 1px solid $grey1

.user-widget-small-name
    font-weight bold
    font-size 15px

.user-widget-small-bio
    font-size 12px

.user-widget-small
    margin-bottom 30px

.home-media-wrapper
    margin-bottom 20px

.media:first-child
    margin-top 15px

.featured-mentors-more-wrapper
    margin-top 40px

.featured-mentors-title
    margin 20px 0 50px 0

.footer
    border-top 1px solid $grey1
    margin 80px 0 40px 0
    padding 20px 0

